[gd_scene load_steps=3 format=3 uid="uid://cbhx0pqmbtmao"]

[ext_resource type="Script" path="res://Scenes/Scripts/title_screen.gd" id="1_b4ius"]
[ext_resource type="Theme" uid="uid://ccgqjg61ykiio" path="res://knife_project_theme.tres" id="1_nmix3"]

[node name="TitleScreen" type="CanvasLayer"]
follow_viewport_enabled = true
script = ExtResource("1_b4ius")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_nmix3")

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0605303, 0.0605304, 0.0605303, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="BoxContainer3" type="BoxContainer" parent="Control/ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_constants/separation = 100

[node name="RichTextLabel" type="RichTextLabel" parent="Control/ColorRect/VBoxContainer/BoxContainer3"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/bold_font_size = 60
bbcode_enabled = true
text = "[center][b]JIMMY THE KNIFE[/b][/center]"

[node name="PlayButton" type="Button" parent="Control/ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
text = "PLAY"

[node name="SettingsButton" type="Button" parent="Control/ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
text = "SETTINGS"

[node name="ExitButton" type="Button" parent="Control/ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
text = "QUIT GAME"

[connection signal="pressed" from="Control/ColorRect/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Control/ColorRect/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Control/ColorRect/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
